--- a/src/Trouve/BlogBundle/Resources/config/routing.yml
+++ b/src/Trouve/BlogBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 trouve_blog_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: TrouveBlogBundle:Default:index }
+    pattern:  /
+    defaults: { _controller: TrouveBlogBundle:Index:index }
