formulaire new post

--- a/src/Trouve/BlogBundle/Resources/config/routing.yml
+++ b/src/Trouve/BlogBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
 trouve_blog_homepage:
     pattern:  /
     defaults: { _controller: TrouveBlogBundle:Index:index }
+trouve_blog_newPost:
+    pattern:  /post/new
+    defaults: { _controller: TrouveBlogBundle:Post:new }
