--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,7 +22,8 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
-            logout:       true
+            logout:       
+                target: /admin
             anonymous:    true
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
