--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,7 +76,7 @@ fos_user:
 admingenerator_generator:
     # choose  and enable at least one
     use_doctrine_orm:     true
-    base_admin_template: AdmingeneratorGeneratorBundle::base_admin_assetic_less.html.twig
+    base_admin_template: TrouveAdminBundle::base_admin_assetic_less.html.twig
     dashboard_welcome_path: fos_user_security_login
     
 admingenerator_user:
